@@ -1194,6 +1194,15 @@ bool Score::read(QDomElement e)
             QString version = e.attribute(QString("version"));
             QStringList sl = version.split('.');
             _mscVersion = sl[0].toInt() * 100 + sl[1].toInt();
+            if (_mscVersion > MSCVERSION) {
+                  // incompatible version
+                  QMessageBox::critical(0, tr("MuseScore"),
+                     QT_TRANSLATE_NOOP("score", "Cannot read this score:\n"
+                        "your version of MuseScore is too old.")
+                     );
+                  return false;
+                  }
+
             for (QDomElement ee = e.firstChildElement(); !ee.isNull(); ee = ee.nextSiblingElement()) {
                   curTrack = -1;
                   QString tag(ee.tagName());
